gccida/c3/requires_inout
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/local-alloc.c:2906:10: error: conflicting types for 'requires_inout'
__int64  requires_inout( const char *p) 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/local-alloc.c:304:12: note: previous declaration is here
static int requires_inout       PARAMS ((const char *));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/local-alloc.c:2983:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v10] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/local-alloc.c:3084:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v9] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/local-alloc.c:3185:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v8] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/local-alloc.c:3285:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v7] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/requires_inout/src/obj/local-alloc.o] Error 1
